# robotnik_gazebo_models

./: CMakeLists.txt  install_models.sh  package.xml
ar_tags/marker3_border_16cm/: marker3_border_16cm.sdf  model.config
ar_tags/marker3_border_16cm/material/scripts/: marker3_16cm.material
ar_tags/marker4_border_16cm/: marker4_border_16cm.sdf  model.config
ar_tags/marker4_border_16cm/material/scripts/: marker4_border_16cm.material
docking_station_summit/: model.config  model.sdf
models/robot_doghouse/: model.config  model.sdf
models/robot_doghouse/meshes/: robot_doghouse.stl
models/steel_tke_glovebox/: model.sdf
models/steel_tke_glovebox/material/scripts/: fiducials_markers.material  hole_marker.material
rb1_cart/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
rb1_cart/meshes/: rb1_cart.dae
rb1_docking_station_1/: rb1_docking_station_1.sdf
rb1_rblog_cart/: rb1_rblog_cart.sdf
rb2_simple_cart/: model.sdf
rb2cart/: model.config
